bdr.BDR.scala.error
Erreur de compilation :
BDR:14: error: too many arguments for method droite: ()Unit
    droite(180);
          ^